--- a/Layout1.html
+++ b/Layout1.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html> Layout1
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Gaming news">
+  <meta name="keywords" content="gaming,games,news">
+  <meta name="author" content="casey weilage">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet"> 
@@ -21,7 +27,16 @@
   padding: 20px 0;
   font-size: 30px;
 }
+div {
+  background-color: green;
+  color: white;
+  padding: 25px;
+  text-align: center;
+}
 
+div:hover {
+  background-color: blue;
+}
 
 </style>
 </head>
